Fix "App category" dropdown button layout overflow
When the name of category is too long, the button
"App category" at the page "Murano" > "Application Catalog"
> "Environments" display under the text "App category".

To fix this bug, "max-width" is set to the button to limit the button's
maximum size, "white-space" to set all whitespace to single whitespace,
"overflow" to hide the overflow text, and "text-overflow" to ellipsis
the overflow texts.

closes-bug: #1475314

--- a/muranodashboard/static/muranodashboard/css/catalog.css
+++ b/muranodashboard/static/muranodashboard/css/catalog.css
@@ -199,6 +199,10 @@ h3.heading_switcher a.btn {
 
 #envAppsCategory > button{
   margin-top: 16px;
+  max-width:60%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #envAppsCategory > h4 {
